--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -1,24 +1,24 @@
-﻿<div class="nav-menu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="bio">
-                Bio
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="projects">
-                Projects
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="skills">
-                Skills
-            </NavLink>
-        </li>
-    </ul>
-</div>
+﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Filipe Almeida</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="#home" Match="NavLinkMatch.All">Home</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="#bio">Bio</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="#projects">Projects</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="#skills">Skills</NavLink>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
