--- a/Layout/NavMenu.razor.css
+++ b/Layout/NavMenu.razor.css
@@ -7,18 +7,22 @@
     background-color: rgba(0,0,0,0.4);
 }
 
+.navbar {
+    box-shadow: none;
+}
+
 .navbar-brand {
     font-size: 1.1rem;
 }
 
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
+.nav-item ::deep a {
+    color: #d7d7d7;
+    border-radius: 4px;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    line-height: 3rem;
+}
 
 .nav-item ::deep a.active {
     background-color: rgba(255,255,255,0.37);
