Add some content to the bio.json file

--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
                     <NavLink class="nav-link" href="#bio">Bio</NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="#projects">Projects</NavLink>
+                    <NavLink class="nav-link" href="#experience">Experience</NavLink>
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="#skills">Skills</NavLink>
