Improvements to responsiveness

--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -8,7 +8,7 @@
             @if (bio != null)
             {
                 <span class="separator">|</span>
-                <span>@bio.Title</span>
+                <span class="left-span">@bio.Title</span>
             }
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
