--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -49,9 +49,7 @@
         }
         else
         {
-            <div class="skills-container">
-                <div class="tagcloud"></div>
-            </div>
+            <div class="skills-container"></div>
         }
     </div>
 </div>
