--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -125,9 +125,9 @@ body {
 }
 
 .tagcloud {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 700;
+    width: 100% !important;
+    max-width: 100vw !important;
+    height: auto !important;
 }
 
 .tagcloud--item {
@@ -272,5 +272,36 @@ code {
     100% {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@media (max-width: 992px) {
+
+    .navbar-brand .separator {
+        display: none;
+    }
+
+    .navbar-brand .left-span {
+        display: none;
+    }
+
+    .navbar-brand {
+        flex-direction: column;
+        gap: 5px;
+        font-size: 1.1rem;
+    }
+    .timeline-item {
+        width: 100% !important;
+        left: 0 !important;
+        padding: 0 1rem 2rem 1rem !important;
+        box-sizing: border-box;
+    }
+    .timeline-item:after {
+        left: 0 !important;
+        right: auto !important;
+    }
+    .timeline::before {
+        left: 8px;
+        transform: none;
     }
 }
