--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -22,7 +22,7 @@
         else
         {
             <div class="timeline">
-                @foreach (var experience in experiences.OrderBy(e => e.From))
+                @foreach (var experience in experiences.OrderByDescending(e => e.From))
                 {
                     <div class="timeline-item">
                         <div class="timeline-content">
