--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -64,6 +64,7 @@ body {
 }
 
 .timeline {
+    overflow: hidden;
     position: relative;
     padding: 2rem 0;
 }
@@ -293,15 +294,20 @@ code {
     .timeline-item {
         width: 100% !important;
         left: 0 !important;
-        padding: 0 1rem 2rem 1rem !important;
+        padding: 0 !important;
+        margin-bottom: 2rem;
         box-sizing: border-box;
     }
     .timeline-item:after {
         left: 0 !important;
+        top: 42px !important;
         right: auto !important;
+        border-radius: 0 !important;
+        border: none !important;
+        height: 2px !important;
+        width: 14px !important;
     }
     .timeline::before {
-        left: 8px;
-        transform: none;
+        display: none;
     }
 }
