Add navbar animation

--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
+@inject IJSRuntime JSRuntime
+
 <div class="page">
     <main>
     <NavMenu />
@@ -7,3 +9,13 @@
         </article>
     </main>
 </div>
+
+@code {
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await JSRuntime.InvokeVoidAsync("navbarScroll.init");
+        }
+    }
+}
