Adjustment to commented code

--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -35,14 +35,13 @@
                     <NavLink class="nav-link" href="#skills">Skills</NavLink>
                 </li>
             </ul>
-            @if (bio != null) {
-                <div class="socials">
-                    <a href="@bio.LinkedIn" target="_blank">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                </div>
-            }
-        </div> *@
+                    @if (bio != null) {
+                        <div class="socials">
+                            <a href="@bio.LinkedIn" target="_blank" aria-label="LinkedIn profile of Filipe Almeida" role="link">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </div>
+                    }        </div> *@
     </div>
 </nav>
 
