--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -2,7 +2,7 @@
 @inject IJSRuntime JS
 @inject HttpClient HttpClient
 
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top px-4">
     <div class="container">
         <a class="navbar-brand" href="#">
             <span>Filipe Almeida</span>
