--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -145,8 +145,7 @@ h2 {
 }
 
 .tagcloud {
-    width: 100% !important;
-    max-width: 100vw !important;
+    max-width: 100% !important;
     height: auto !important;
 }
 
