--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,5 @@
 @page "/"
+@using System.Globalization
 @using filipealmeida.Models
 @inject HttpClient HttpClient
 @inject IJSRuntime JSRuntime
@@ -29,10 +30,11 @@
                         <div class="timeline-content">
                             <p>
                                 <h4 class="card-title">@experience.Title</h4>
-                                <h5 class="card-title">@experience.From.ToString("MMM yyyy") - @(experience.To == null ? "current" : experience.To.Value.ToString("MMM yyyy"))</h5>
+                                <h5 class="card-title">@experience.From.ToString("MMM yyyy", cultureInfo) - 
+                                @(experience.To == null ? "current" : experience.To.Value.ToString("MMM yyyy", cultureInfo))</h5>
                             </p>
                             <p class="card-text">@experience.Company<br>@experience.Location</p>
-                            <p class="card-text">@experience.Description</p>
+                            <p class="card-text description"> @experience.Description</p>
                         </div>
                     </div>
                 }
@@ -59,12 +61,14 @@
     private Bio? bio;
     private List<Experience>? experiences;
     private List<Skill>? skills;
+    private CultureInfo? cultureInfo;
 
     protected override async Task OnInitializedAsync()
     {
         bio = await HttpClient.GetFromJsonAsync<Bio>("data/bio.json");
         experiences = await HttpClient.GetFromJsonAsync<List<Experience>>("data/experience.json");
         skills = await HttpClient.GetFromJsonAsync<List<Skill>>("data/skills.json");
+        cultureInfo = new CultureInfo("en-US");
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
