--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -33,6 +33,37 @@ h2 {
     letter-spacing: 2px;
 }
 
+.navbar {
+    padding-bottom: 3rem;
+    position: relative;
+}
+
+.navbar::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    mask-image: linear-gradient(to bottom, white 30%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to bottom, white 30%, transparent 100%);
+    z-index: -1;
+}
+
+.navbar::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--navbar-bg, rgba(18, 18, 18, 0.1));
+    mask-image: linear-gradient(to bottom, white 30%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to bottom, white 30%, transparent 100%);
+    z-index: -2;
+}
+
 .navbar .container {
     padding-block: 1rem;
 }
@@ -82,6 +113,10 @@ h2 {
     overflow: hidden;
 }
 
+.card-text.description {
+    white-space: pre-wrap;
+}
+
 .timeline {
     overflow: hidden;
     position: relative;
@@ -116,7 +151,7 @@ h2 {
 }
 
 .timeline-content {
-    background-color: var(--surface-color);
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 1.5rem;
     border-radius: 10px;
 }
@@ -130,7 +165,6 @@ h2 {
     height: 16px;
     border-radius: 50%;
     background-color: var(--accent-color);
-    border: 2px solid var(--surface-color);
 }
 
 .timeline-item:nth-child(even)::after {
@@ -195,6 +229,7 @@ a, .btn-link {
 
 .content {
     padding-top: 2rem;
+    background: linear-gradient(75deg, #004242, #367588, #008170);
 }
 
 .valid.modified:not([type=checkbox]) {
