--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,7 +4,7 @@
 @inject HttpClient HttpClient
 @inject IJSRuntime JSRuntime
 
-<div id="home" class="hero-section my-5 animate__animated animate__fadeInUp" role="region" aria-label="Hero Section">
+<div id="home" class="hero-section mt-5 animate__animated animate__fadeInUp" role="region" aria-label="Hero Section">
     @if (bio != null)
     {
         <div class="container text-center">
@@ -12,6 +12,19 @@
             <p class="lead">@bio.Summary</p>
         </div>
     }
+</div>
+
+<div id="skills" class="" role="region" aria-label="Skills Section">
+    <div class="container">
+        @if (skills == null)
+        {
+            <p>Loading...</p>
+        }
+        else
+        {
+            <div class="skills-container"></div>
+        }
+    </div>
 </div>
 
 <div id="experience" class="my-5" role="region" aria-label="Experience Section">
@@ -39,20 +52,6 @@
                     </div>
                 }
             </div>
-        }
-    </div>
-</div>
-
-<div id="skills" class="my-5" role="region" aria-label="Skills Section">
-    <div class="container">
-        <h2>Skills</h2>
-        @if (skills == null)
-        {
-            <p>Loading...</p>
-        }
-        else
-        {
-            <div class="skills-container"></div>
         }
     </div>
 </div>
