Increase scroll up button click area

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -56,8 +56,10 @@
                         </div>
                     </div>
                 }
-                <a id="scroll-to-top" class="scroll-to-top-button" @onclick="ScrollToTop">
-                </a>
+                <div class="scroll-to-top-wrapper" @onclick="ScrollToTop">
+                    <a id="scroll-to-top" class="scroll-to-top-button">
+                    </a>
+                </div>
             </div>
         }
     </div>
