Fix experiences UI issue

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -184,6 +184,11 @@ h2 {
     background-color: var(--accent-color);
 }
 
+.timeline-item:nth-child(even)::after {
+    left: -8px;
+    right: auto;
+}
+
 .scroll-to-top-wrapper {
     position: absolute;
     bottom: -73px;
