--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -8,6 +8,9 @@
     @if (bio != null)
     {
         <div class="container text-center">
+            <div class="portrait-container">
+                <img src="images/portrait.jpg" alt="Portrait" class="portrait-image" />
+            </div>
             <h1 class="display-4">@bio.Name</h1>
             <p class="lead">@bio.Summary</p>
         </div>
