--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -102,6 +102,7 @@ h2 {
 
 .hero-section {
     padding-bottom: 4rem;
+    padding-top: 2rem;
 }
 
 .hero-section .container {
@@ -109,12 +110,29 @@ h2 {
     z-index: 1;
 }
 
+.hero-container {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    padding-inline: 10rem !important;
+}
+
 .portrait-image {
-    width: 450px;
-    height: 450px;
+    width: 390px;
+    height: 390px;
     border-radius: 50%;
     object-fit: cover;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 6px 19px rgba(0, 0, 0, 0.4);
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.summary-text {
+    text-align: start;
 }
 
 .card {
