Adjustments to portrait and hero text in mobile

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -439,4 +439,22 @@ code {
     .timeline::before {
         display: none;
     }
+    .hero-container {
+        flex-direction: column;
+        padding-inline: initial !important;
+    }
+    .text-container {
+        align-items: center;
+    }
+    .summary-text {
+        text-align: center;
+    }
+    .portrait-image {
+        width: 100vw;
+        max-height: 500px;
+        position: relative;
+        top: 0;
+        left: 0;
+        border-radius: 0;
+    }
 }
