Improvements to mobile layout

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,7 +4,7 @@
 @inject HttpClient HttpClient
 @inject IJSRuntime JSRuntime
 
-<div id="home" class="hero-section mt-5 animate__animated animate__fadeInUp" role="region" aria-label="Hero Section">
+<div id="home" class="hero-section animate__animated animate__fadeInUp" role="region" aria-label="Hero Section">
     @if (bio != null)
     {
         <div class="hero-container container text-center">
@@ -37,7 +37,7 @@
     </div>
 </div>
 
-<div id="experience" class="my-5" role="region" aria-label="Experience Section">
+<div id="experience" role="region" aria-label="Experience Section">
     <div class="container">
 
         @if (experiences == null)
